--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,3 +7,34 @@
   background-color: #333;
   color: #fff;
 }
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo h1 {
+  margin-left: 0.5em;
+}
+
+.link_items {
+  display: flex;
+  list-style: none;
+}
+
+.link_items li {
+  margin-right: 1.3em;
+}
+
+.link_items a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px;
+  transition: 0.4s;
+  border-bottom: 2px solid transparent;
+}
+
+.link_items a:hover {
+  border-color: #fff;
+}
