--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,28 +1,26 @@
 .title_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2em;
 }
 
 .title {
-    color:#E33d33;
-    text-align: center;
-    font-size: 3em;
-    margin-right: 0.4em;
+  color: #e33d33;
+  text-align: center;
+  font-size: 3em;
+  margin-right: 0.4em;
 }
 
 .title span {
-    color:#333;
-
+  color: #333;
 }
 
-.pokemon_container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1100px;
-    margin:0 auto;
-
+.pokemoncontainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: stretch;
+  max-width: 1100px;
+  margin: 0 auto;
 }
